--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ body a:hover
     padding-bottom: 170px;
     min-height: calc(100vh - 170px);
     background-color: #221c5a; 
-    background-image:url(bg.png); 
+    background-image:url(bg.jpg); 
     background-repeat: repeat; 
     background-position: center top; 
     background-size: cover;
